parser.output
Terminaux inutilisés dans la grammaire

   LITERAL_ASSEMBLY
   TOK_CHAR
   TOK_STRING


Grammaire

    0 $accept: program $end

    1 program: program statement
    2        | statement

    3 stm_if: TOK_IF '(' expression ')' statement
    4       | TOK_IF '(' expression ')' statement TOK_ELSE statement

    5 stm_while: TOK_WHILE '(' expression ')' statement

    6 stm_do: TOK_DO statement TOK_WHILE '(' expression ')' ';'

    7 stm_for: TOK_FOR '(' expression ';' expression ';' expression ')' statement

    8 stm_block: '{' stm_list '}'
    9          | '{' '}'

   10 stm_list: statement
   11         | stm_list statement

   12 stm_expr: ';'
   13         | expression ';'

   14 stm_switch: TOK_SWITCH '(' expression ')' '{' list_cases '}'

   15 list_cases: TOK_CASE LITERAL_BYTE ':' stm_list
   16           | TOK_CASE LITERAL_SHORT ':' stm_list
   17           | TOK_CASE LITERAL_INTEGER ':' stm_list
   18           | TOK_CASE LITERAL_LONG ':' stm_list
   19           | TOK_DEFAULT ':' stm_list
   20           | list_cases TOK_CASE LITERAL_BYTE ':' stm_list
   21           | list_cases TOK_CASE LITERAL_SHORT ':' stm_list
   22           | list_cases TOK_CASE LITERAL_INTEGER ':' stm_list
   23           | list_cases TOK_CASE LITERAL_LONG ':' stm_list
   24           | list_cases TOK_DEFAULT ':' stm_list

   25 stm_return: TOK_RETURN expression ';'
   26           | TOK_RETURN ';'

   27 stm_break: TOK_BREAK ';'

   28 stm_continue: TOK_CONTINUE ';'

   29 stm_import: TOK_IMPORT TOK_IDENTIFIER ';'

   30 statement: stm_expr
   31          | stm_import
   32          | stm_block
   33          | stm_if
   34          | stm_do
   35          | stm_for
   36          | stm_while
   37          | stm_switch
   38          | stm_return
   39          | stm_break
   40          | stm_continue
   41          | declaration

   42 declaration: type_specifier TOK_IDENTIFIER TOK_ASSIGN expression ';'
   43            | TOK_VAR TOK_IDENTIFIER TOK_ASSIGN expression ';'
   44            | type_specifier TOK_IDENTIFIER ';'
   45            | type_specifier TOK_IDENTIFIER '(' ')' stm_block
   46            | type_specifier TOK_IDENTIFIER '(' TOK_VOID ')' stm_block
   47            | type_specifier TOK_IDENTIFIER '(' argument_definition_list ')' stm_block
   48            | type_specifier TOK_IDENTIFIER '(' ')' ';'
   49            | type_specifier TOK_IDENTIFIER '(' TOK_VOID ')' ';'
   50            | type_specifier TOK_IDENTIFIER '(' argument_definition_list ')' ';'
   51            | type_specifier TOK_EXTERN TOK_IDENTIFIER '(' ')' ';'
   52            | type_specifier TOK_EXTERN TOK_IDENTIFIER '(' TOK_VOID ')' ';'
   53            | type_specifier TOK_EXTERN TOK_IDENTIFIER '(' argument_definition_list ')' ';'
   54            | class_declaration
   55            | interface_declaration

   56 interface_declaration: TOK_INTERFACE interface_identifier '{' interface_element_list '}'

   57 interface_identifier: TOK_IDENTIFIER

   58 interface_element_list: interface_element
   59                       | interface_element_list interface_element

   60 interface_element: type_specifier TOK_IDENTIFIER '(' ')' ';'
   61                  | type_specifier TOK_IDENTIFIER '(' argument_definition_list ')' ';'

   62 class_declaration: TOK_CLASS class_identifier '{' class_element_list '}'

   63 class_identifier: TOK_IDENTIFIER
   64                 | TOK_IDENTIFIER TOK_EXTENDS TOK_TYPE_IDENTIFIER
   65                 | TOK_IDENTIFIER TOK_IMPLEMENTS TOK_TYPE_IDENTIFIER

   66 class_element_list: class_element
   67                   | class_element_list class_element

   68 class_element: type_specifier TOK_IDENTIFIER ';'
   69              | type_specifier TOK_IDENTIFIER '(' ')' stm_block
   70              | type_specifier TOK_IDENTIFIER '(' TOK_VOID ')' stm_block
   71              | type_specifier TOK_IDENTIFIER '(' argument_definition_list ')' stm_block
   72              | TOK_VIRTUAL type_specifier TOK_IDENTIFIER '(' ')' stm_block
   73              | TOK_VIRTUAL type_specifier TOK_IDENTIFIER '(' TOK_VOID ')' stm_block
   74              | TOK_VIRTUAL type_specifier TOK_IDENTIFIER '(' argument_definition_list ')' stm_block
   75              | TOK_OVERRIDE type_specifier TOK_IDENTIFIER '(' ')' stm_block
   76              | TOK_OVERRIDE type_specifier TOK_IDENTIFIER '(' TOK_VOID ')' stm_block
   77              | TOK_OVERRIDE type_specifier TOK_IDENTIFIER '(' argument_definition_list ')' stm_block
   78              | TOK_STATIC type_specifier TOK_IDENTIFIER '(' ')' stm_block
   79              | TOK_STATIC type_specifier TOK_IDENTIFIER '(' TOK_VOID ')' stm_block
   80              | TOK_STATIC type_specifier TOK_IDENTIFIER '(' argument_definition_list ')' stm_block

   81 argument_definition_list: type_specifier TOK_IDENTIFIER
   82                         | argument_definition_list ',' type_specifier TOK_IDENTIFIER

   83 type_specifier: type_primary
   84               | TOK_TYPE_IDENTIFIER
   85               | type_specifier '[' ']'
   86               | type_specifier '[' LITERAL_INTEGER ']'
   87               | TOK_VOID

   88 type_primary: TOK_BOOL
   89             | TOK_BYTE
   90             | TOK_SHORT
   91             | TOK_INT
   92             | TOK_LONG
   93             | TOK_FLOAT
   94             | TOK_DOUBLE

   95 expr_primary: TOK_TRUE
   96             | TOK_FALSE
   97             | allocate_array
   98             | literal_array
   99             | LITERAL_CHAR
  100             | LITERAL_BYTE
  101             | LITERAL_SHORT
  102             | LITERAL_INTEGER
  103             | LITERAL_LONG
  104             | LITERAL_FLOAT
  105             | LITERAL_DOUBLE
  106             | LITERAL_STRING
  107             | TOK_IDENTIFIER
  108             | TOK_TYPE_IDENTIFIER '(' ')'
  109             | '(' expression ')'

  110 allocate_array: '{' type_specifier '*' expression '}'

  111 literal_array: '{' array_list '}'

  112 array_list: expression
  113           | array_list ',' expression

  114 argument_list: expression
  115              | argument_list ',' expression

  116 expr_postfix: expr_primary
  117             | expr_postfix '[' expression ']'
  118             | expr_postfix '(' argument_list ')'
  119             | expr_postfix '(' ')'
  120             | expr_postfix '.' TOK_IDENTIFIER
  121             | TOK_TYPE_IDENTIFIER '.' TOK_IDENTIFIER
  122             | expr_postfix TOK_INC
  123             | expr_postfix TOK_DEC

  124 expr_unary: expr_postfix
  125           | TOK_INC expr_unary
  126           | TOK_DEC expr_unary
  127           | '+' expr_unary
  128           | '-' expr_unary
  129           | '~' expr_unary
  130           | '!' expr_unary

  131 expr_mul: expr_unary
  132         | expr_mul '*' expr_unary
  133         | expr_mul '/' expr_unary
  134         | expr_mul '%' expr_unary

  135 expr_add: expr_mul
  136         | expr_add '+' expr_mul
  137         | expr_add '-' expr_mul

  138 expr_shift: expr_add
  139           | expr_shift TOK_SHL expr_add
  140           | expr_shift TOK_SHR expr_add
  141           | expr_shift TOK_ASHR expr_add

  142 expr_comparison: expr_shift
  143                | expr_comparison TOK_LT expr_shift
  144                | expr_comparison TOK_LTE expr_shift
  145                | expr_comparison TOK_GT expr_shift
  146                | expr_comparison TOK_GTE expr_shift

  147 expr_equal: expr_comparison
  148           | expr_equal TOK_EQ expr_comparison
  149           | expr_equal TOK_NEQ expr_comparison

  150 expr_bitwise_and: expr_equal
  151                 | expr_bitwise_and '&' expr_equal

  152 expr_bitwise_xor: expr_bitwise_and
  153                 | expr_bitwise_xor '^' expr_bitwise_and

  154 expr_bitwise_or: expr_bitwise_xor
  155                | expr_bitwise_or '|' expr_bitwise_xor

  156 expr_logical_and: expr_bitwise_or
  157                 | expr_logical_and TOK_AND expr_bitwise_or

  158 expr_logical_or: expr_logical_and
  159                | expr_logical_or TOK_OR expr_logical_and

  160 expr_conditional: expr_logical_or
  161                 | expr_logical_or '?' expression ':' expr_conditional

  162 expr_assign: expr_conditional
  163            | expr_unary TOK_ASSIGN expr_assign
  164            | expr_unary TOK_ADD_ASSIGN expr_assign
  165            | expr_unary TOK_SUB_ASSIGN expr_assign
  166            | expr_unary TOK_MUL_ASSIGN expr_assign
  167            | expr_unary TOK_DIV_ASSIGN expr_assign
  168            | expr_unary TOK_MOD_ASSIGN expr_assign
  169            | expr_unary TOK_B_AND_ASSIGN expr_assign
  170            | expr_unary TOK_B_OR_ASSIGN expr_assign
  171            | expr_unary TOK_B_XOR_ASSIGN expr_assign
  172            | expr_unary TOK_SHL_ASSIGN expr_assign
  173            | expr_unary TOK_SHR_ASSIGN expr_assign
  174            | expr_unary TOK_ASHR_ASSIGN expr_assign

  175 expression: expr_assign


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 130
'%' (37) 134
'&' (38) 151
'(' (40) 3 4 5 6 7 14 45 46 47 48 49 50 51 52 53 60 61 69 70 71 72
    73 74 75 76 77 78 79 80 108 109 118 119
')' (41) 3 4 5 6 7 14 45 46 47 48 49 50 51 52 53 60 61 69 70 71 72
    73 74 75 76 77 78 79 80 108 109 118 119
'*' (42) 110 132
'+' (43) 127 136
',' (44) 82 113 115
'-' (45) 128 137
'.' (46) 120 121
'/' (47) 133
':' (58) 15 16 17 18 19 20 21 22 23 24 161
';' (59) 6 7 12 13 25 26 27 28 29 42 43 44 48 49 50 51 52 53 60 61
    68
'?' (63) 161
'[' (91) 85 86 117
']' (93) 85 86 117
'^' (94) 153
'{' (123) 8 9 14 56 62 110 111
'|' (124) 155
'}' (125) 8 9 14 56 62 110 111
'~' (126) 129
error (256)
LITERAL_CHAR (258) 99
LITERAL_BYTE (259) 15 20 100
LITERAL_SHORT (260) 16 21 101
LITERAL_INTEGER (261) 17 22 86 102
LITERAL_LONG (262) 18 23 103
LITERAL_FLOAT (263) 104
LITERAL_DOUBLE (264) 105
LITERAL_STRING (265) 106
LITERAL_ASSEMBLY (266)
TOK_IDENTIFIER (267) 29 42 43 44 45 46 47 48 49 50 51 52 53 57 60 61
    63 64 65 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 107 120 121
TOK_TYPE_IDENTIFIER (268) 64 65 84 108 121
TOK_IF (269) 3 4
TOK_ELSE (270) 4
TOK_SWITCH (271) 14
TOK_CASE (272) 15 16 17 18 20 21 22 23
TOK_WHILE (273) 5 6
TOK_DO (274) 6
TOK_FOR (275) 7
TOK_BREAK (276) 27
TOK_CONTINUE (277) 28
TOK_DEFAULT (278) 19 24
TOK_IMPORT (279) 29
TOK_EXTERN (280) 51 52 53
TOK_VIRTUAL (281) 72 73 74
TOK_OVERRIDE (282) 75 76 77
TOK_STATIC (283) 78 79 80
TOK_EXTENDS (284) 64
TOK_IMPLEMENTS (285) 65
TOK_VAR (286) 43
TOK_CLASS (287) 62
TOK_INTERFACE (288) 56
TOK_BOOL (289) 88
TOK_CHAR (290)
TOK_BYTE (291) 89
TOK_SHORT (292) 90
TOK_INT (293) 91
TOK_LONG (294) 92
TOK_FLOAT (295) 93
TOK_DOUBLE (296) 94
TOK_STRING (297)
TOK_VOID (298) 46 49 52 70 73 76 79 87
TOK_TRUE (299) 95
TOK_FALSE (300) 96
TOK_RETURN (301) 25 26
TOK_ASSIGN (302) 42 43 163
TOK_ADD_ASSIGN (303) 164
TOK_SUB_ASSIGN (304) 165
TOK_MUL_ASSIGN (305) 166
TOK_DIV_ASSIGN (306) 167
TOK_MOD_ASSIGN (307) 168
TOK_B_AND_ASSIGN (308) 169
TOK_B_OR_ASSIGN (309) 170
TOK_B_XOR_ASSIGN (310) 171
TOK_SHL_ASSIGN (311) 172
TOK_SHR_ASSIGN (312) 173
TOK_ASHR_ASSIGN (313) 174
TOK_INC (314) 122 125
TOK_DEC (315) 123 126
TOK_EQ (316) 148
TOK_NEQ (317) 149
TOK_LT (318) 143
TOK_LTE (319) 144
TOK_GT (320) 145
TOK_GTE (321) 146
TOK_AND (322) 157
TOK_OR (323) 159
TOK_SHL (324) 139
TOK_SHR (325) 140
TOK_ASHR (326) 141
IFX (327)


Non-terminaux, suivis des règles où ils apparaissent

$accept (94)
    à gauche: 0
program (95)
    à gauche: 1 2, à droite: 0 1
stm_if (96)
    à gauche: 3 4, à droite: 33
stm_while (97)
    à gauche: 5, à droite: 36
stm_do (98)
    à gauche: 6, à droite: 34
stm_for (99)
    à gauche: 7, à droite: 35
stm_block (100)
    à gauche: 8 9, à droite: 32 45 46 47 69 70 71 72 73 74 75 76
    77 78 79 80
stm_list (101)
    à gauche: 10 11, à droite: 8 11 15 16 17 18 19 20 21 22 23 24
stm_expr (102)
    à gauche: 12 13, à droite: 30
stm_switch (103)
    à gauche: 14, à droite: 37
list_cases (104)
    à gauche: 15 16 17 18 19 20 21 22 23 24, à droite: 14 20 21 22
    23 24
stm_return (105)
    à gauche: 25 26, à droite: 38
stm_break (106)
    à gauche: 27, à droite: 39
stm_continue (107)
    à gauche: 28, à droite: 40
stm_import (108)
    à gauche: 29, à droite: 31
statement (109)
    à gauche: 30 31 32 33 34 35 36 37 38 39 40 41, à droite: 1 2
    3 4 5 6 7 10 11
declaration (110)
    à gauche: 42 43 44 45 46 47 48 49 50 51 52 53 54 55, à droite:
    41
interface_declaration (111)
    à gauche: 56, à droite: 55
interface_identifier (112)
    à gauche: 57, à droite: 56
interface_element_list (113)
    à gauche: 58 59, à droite: 56 59
interface_element (114)
    à gauche: 60 61, à droite: 58 59
class_declaration (115)
    à gauche: 62, à droite: 54
class_identifier (116)
    à gauche: 63 64 65, à droite: 62
class_element_list (117)
    à gauche: 66 67, à droite: 62 67
class_element (118)
    à gauche: 68 69 70 71 72 73 74 75 76 77 78 79 80, à droite: 66
    67
argument_definition_list (119)
    à gauche: 81 82, à droite: 47 50 53 61 71 74 77 80 82
type_specifier (120)
    à gauche: 83 84 85 86 87, à droite: 42 44 45 46 47 48 49 50 51
    52 53 60 61 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 85 86
    110
type_primary (121)
    à gauche: 88 89 90 91 92 93 94, à droite: 83
expr_primary (122)
    à gauche: 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109,
    à droite: 116
allocate_array (123)
    à gauche: 110, à droite: 97
literal_array (124)
    à gauche: 111, à droite: 98
array_list (125)
    à gauche: 112 113, à droite: 111 113
argument_list (126)
    à gauche: 114 115, à droite: 115 118
expr_postfix (127)
    à gauche: 116 117 118 119 120 121 122 123, à droite: 117 118
    119 120 122 123 124
expr_unary (128)
    à gauche: 124 125 126 127 128 129 130, à droite: 125 126 127
    128 129 130 131 132 133 134 163 164 165 166 167 168 169 170 171
    172 173 174
expr_mul (129)
    à gauche: 131 132 133 134, à droite: 132 133 134 135 136 137
expr_add (130)
    à gauche: 135 136 137, à droite: 136 137 138 139 140 141
expr_shift (131)
    à gauche: 138 139 140 141, à droite: 139 140 141 142 143 144
    145 146
expr_comparison (132)
    à gauche: 142 143 144 145 146, à droite: 143 144 145 146 147
    148 149
expr_equal (133)
    à gauche: 147 148 149, à droite: 148 149 150 151
expr_bitwise_and (134)
    à gauche: 150 151, à droite: 151 152 153
expr_bitwise_xor (135)
    à gauche: 152 153, à droite: 153 154 155
expr_bitwise_or (136)
    à gauche: 154 155, à droite: 155 156 157
expr_logical_and (137)
    à gauche: 156 157, à droite: 157 158 159
expr_logical_or (138)
    à gauche: 158 159, à droite: 159 160 161
expr_conditional (139)
    à gauche: 160 161, à droite: 161 162
expr_assign (140)
    à gauche: 162 163 164 165 166 167 168 169 170 171 172 173 174,
    à droite: 163 164 165 166 167 168 169 170 171 172 173 174 175
expression (141)
    à gauche: 175, à droite: 3 4 5 6 7 13 14 25 42 43 109 110 112
    113 114 115 117 161


état 0

    0 $accept: . program $end

    LITERAL_CHAR         décalage et aller à l'état 1
    LITERAL_BYTE         décalage et aller à l'état 2
    LITERAL_SHORT        décalage et aller à l'état 3
    LITERAL_INTEGER      décalage et aller à l'état 4
    LITERAL_LONG         décalage et aller à l'état 5
    LITERAL_FLOAT        décalage et aller à l'état 6
    LITERAL_DOUBLE       décalage et aller à l'état 7
    LITERAL_STRING       décalage et aller à l'état 8
    TOK_IDENTIFIER       décalage et aller à l'état 9
    TOK_TYPE_IDENTIFIER  décalage et aller à l'état 10
    TOK_IF               décalage et aller à l'état 11
    TOK_SWITCH           décalage et aller à l'état 12
    TOK_WHILE            décalage et aller à l'état 13
    TOK_DO               décalage et aller à l'état 14
    TOK_FOR              décalage et aller à l'état 15
    TOK_BREAK            décalage et aller à l'état 16
    TOK_CONTINUE         décalage et aller à l'état 17
    TOK_IMPORT           décalage et aller à l'état 18
    TOK_VAR              décalage et aller à l'état 19
    TOK_CLASS            décalage et aller à l'état 20
    TOK_INTERFACE        décalage et aller à l'état 21
    TOK_BOOL             décalage et aller à l'état 22
    TOK_BYTE             décalage et aller à l'état 23
    TOK_SHORT            décalage et aller à l'état 24
    TOK_INT              décalage et aller à l'état 25
    TOK_LONG             décalage et aller à l'état 26
    TOK_FLOAT            décalage et aller à l'état 27
    TOK_DOUBLE           décalage et aller à l'état 28
    TOK_VOID             décalage et aller à l'état 29
    TOK_TRUE             décalage et aller à l'état 30
    TOK_FALSE            décalage et aller à l'état 31
    TOK_RETURN           décalage et aller à l'état 32
    TOK_INC              décalage et aller à l'état 33
    TOK_DEC              décalage et aller à l'état 34
    '('                  décalage et aller à l'état 35
    ';'                  décalage et aller à l'état 36
    '{'                  décalage et aller à l'état 37
    '+'                  décalage et aller à l'état 38
    '-'                  décalage et aller à l'état 39
    '~'                  décalage et aller à l'état 40
    '!'                  décalage et aller à l'état 41

    program                aller à l'état 42
    stm_if                 aller à l'état 43
    stm_while              aller à l'état 44
    stm_do                 aller à l'état 45
    stm_for                aller à l'état 46
    stm_block              aller à l'état 47
    stm_expr               aller à l'état 48
    stm_switch             aller à l'état 49
    stm_return             aller à l'état 50
    stm_break              aller à l'état 51
    stm_continue           aller à l'état 52
    stm_import             aller à l'état 53
    statement              aller à l'état 54
    declaration            aller à l'état 55
    interface_declaration  aller à l'état 56
    class_declaration      aller à l'état 57
    type_specifier         aller à l'état 58
    type_primary           aller à l'état 59
    expr_primary           aller à l'état 60
    allocate_array         aller à l'état 61
    literal_array          aller à l'état 62
    expr_postfix           aller à l'état 63
    expr_unary             aller à l'état 64
    expr_mul               aller à l'état 65
    expr_add               aller à l'état 66
    expr_shift             aller à l'état 67
    expr_comparison        aller à l'état 68
    expr_equal             aller à l'état 69
    expr_bitwise_and       aller à l'état 70
    expr_bitwise_xor       aller à l'état 71
    expr_bitwise_or        aller à l'état 72
    expr_logical_and       aller à l'état 73
    expr_logical_or        aller à l'état 74
    expr_conditional       aller à l'état 75
    expr_assign            aller à l'état 76
    expression             aller à l'état 77


état 1

   99 expr_primary: LITERAL_CHAR .

    $défaut  réduction par utilisation de la règle 99 (expr_primary)


état 2

  100 expr_primary: LITERAL_BYTE .

    $défaut  réduction par utilisation de la règle 100 (expr_primary)


état 3

  101 expr_primary: LITERAL_SHORT .

    $défaut  réduction par utilisation de la règle 101 (expr_primary)


état 4

  102 expr_primary: LITERAL_INTEGER .

    $défaut  réduction par utilisation de la règle 102 (expr_primary)


état 5

  103 expr_primary: LITERAL_LONG .

    $défaut  réduction par utilisation de la règle 103 (expr_primary)


état 6

  104 expr_primary: LITERAL_FLOAT .

    $défaut  réduction par utilisation de la règle 104 (expr_primary)


état 7

  105 expr_primary: LITERAL_DOUBLE .

    $défaut  réduction par utilisation de la règle 105 (expr_primary)


état 8

  106 expr_primary: LITERAL_STRING .

    $défaut  réduction par utilisation de la règle 106 (expr_primary)


état 9

  107 expr_primary: TOK_IDENTIFIER .

    $défaut  réduction par utilisation de la règle 107 (expr_primary)


état 10

   84 type_specifier: TOK_TYPE_IDENTIFIER .
  108 expr_primary: TOK_TYPE_IDENTIFIER . '(' ')'
  121 expr_postfix: TOK_TYPE_IDENTIFIER . '.' TOK_IDENTIFIER

    '('  décalage et aller à l'état 78
    '.'  décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 84 (type_specifier)


état 11

    3 stm_if: TOK_IF . '(' expression ')' statement
    4       | TOK_IF . '(' expression ')' statement TOK_ELSE statement

    '('  décalage et aller à l'état 80


état 12

   14 stm_switch: TOK_SWITCH . '(' expression ')' '{' list_cases '}'

    '('  décalage et aller à l'état 81


état 13

    5 stm_while: TOK_WHILE . '(' expression ')' statement

    '('  décalage et aller à l'état 82


état 14

    6 stm_do: TOK_DO . statement TOK_WHILE '(' expression ')' ';'

    LITERAL_CHAR         décalage et aller à l'état 1
    LITERAL_BYTE         décalage et aller à l'état 2
    LITERAL_SHORT        décalage et aller à l'état 3
    LITERAL_INTEGER      décalage et aller à l'état 4
    LITERAL_LONG         décalage et aller à l'état 5
    LITERAL_FLOAT        décalage et aller à l'état 6
    LITERAL_DOUBLE       décalage et aller à l'état 7
    LITERAL_STRING       décalage et aller à l'état 8
    TOK_IDENTIFIER       décalage et aller à l'état 9
    TOK_TYPE_IDENTIFIER  décalage et aller à l'état 10
    TOK_IF               décalage et aller à l'état 11
    TOK_SWITCH           décalage et aller à l'état 12
    TOK_WHILE            décalage et aller à l'état 13
    TOK_DO               décalage et aller à l'état 14
    TOK_FOR              décalage et aller à l'état 15
    TOK_BREAK            décalage et aller à l'état 16
    TOK_CONTINUE         décalage et aller à l'état 17
    TOK_IMPORT           décalage et aller à l'état 18
    TOK_VAR              décalage et aller à l'état 19
    TOK_CLASS            décalage et aller à l'état 20
    TOK_INTERFACE        décalage et aller à l'état 21
    TOK_BOOL             décalage et aller à l'état 22
    TOK_BYTE             décalage et aller à l'état 23
    TOK_SHORT            décalage et aller à l'état 24
    TOK_INT              décalage et aller à l'état 25
    TOK_LONG             décalage et aller à l'état 26
    TOK_FLOAT            décalage et aller à l'état 27
    TOK_DOUBLE           décalage et aller à l'état 28
    TOK_VOID             décalage et aller à l'état 29
    TOK_TRUE             décalage et aller à l'état 30
    TOK_FALSE            décalage et aller à l'état 31
    TOK_RETURN           décalage et aller à l'état 32
    TOK_INC              décalage et aller à l'état 33
    TOK_DEC              décalage et aller à l'état 34
    '('                  décalage et aller à l'état 35
    ';'                  décalage et aller à l'état 36
    '{'                  décalage et aller à l'état 37
    '+'                  décalage et aller à l'état 38
    '-'                  décalage et aller à l'état 39
    '~'                  décalage et aller à l'état 40
    '!'                  décalage et aller à l'état 41

    stm_if                 aller à l'état 43
    stm_while              aller à l'état 44
    stm_do                 aller à l'état 45
    stm_for                aller à l'état 46
    stm_block              aller à l'état 47
    stm_expr               aller à l'état 48
    stm_switch             aller à l'état 49
    stm_return             aller à l'état 50
    stm_break              aller à l'état 51
    stm_continue           aller à l'état 52
    stm_import             aller à l'état 53
    statement              aller à l'état 83
    declaration            aller à l'état 55
    interface_declaration  aller à l'état 56
    class_declaration      aller à l'état 57
    type_specifier         aller à l'état 58
    type_primary           aller à l'état 59
    expr_primary           aller à l'état 60
    allocate_array         aller à l'état 61
    literal_array          aller à l'état 62
    expr_postfix           aller à l'état 63
    expr_unary             aller à l'état 64
    expr_mul               aller à l'état 65
    expr_add               aller à l'état 66
    expr_shift             aller à l'état 67
    expr_comparison        aller à l'état 68
    expr_equal             aller à l'état 69
    expr_bitwise_and       aller à l'état 70
    expr_bitwise_xor       aller à l'état 71
    expr_bitwise_or        aller à l'état 72
    expr_logical_and       aller à l'état 73
    expr_logical_or        aller à l'état 74
    expr_conditional       aller à l'état 75
    expr_assign            aller à l'état 76
    expression             aller à l'état 77


état 15

    7 stm_for: TOK_FOR . '(' expression ';' expression ';' expression ')' statement

    '('  décalage et aller à l'état 84


état 16

   27 stm_break: TOK_BREAK . ';'

    ';'  décalage et aller à l'état 85


état 17

   28 stm_continue: TOK_CONTINUE . ';'

    ';'  décalage et aller à l'état 86


état 18

   29 stm_import: TOK_IMPORT . TOK_IDENTIFIER ';'

    TOK_IDENTIFIER  décalage et aller à l'état 87


état 19

   43 declaration: TOK_VAR . TOK_IDENTIFIER TOK_ASSIGN expression ';'

    TOK_IDENTIFIER  décalage et aller à l'état 88


état 20

   62 class_declaration: TOK_CLASS . class_identifier '{' class_element_list '}'

    TOK_IDENTIFIER  décalage et aller à l'état 89

    class_identifier  aller à l'état 90


état 21

   56 interface_declaration: TOK_INTERFACE . interface_identifier '{' interface_element_list '}'

    TOK_IDENTIFIER  décalage et aller à l'état 91

    interface_identifier  aller à l'état 92


état 22

   88 type_primary: TOK_BOOL .

    $défaut  réduction par utilisation de la règle 88 (type_primary)


état 23

   89 type_primary: TOK_BYTE .

    $défaut  réduction par utilisation de la règle 89 (type_primary)


état 24

   90 type_primary: TOK_SHORT .

    $défaut  réduction par utilisation de la règle 90 (type_primary)


état 25

   91 type_primary: TOK_INT .

    $défaut  réduction par utilisation de la règle 91 (type_primary)


état 26

   92 type_primary: TOK_LONG .

    $défaut  réduction par utilisation de la règle 92 (type_primary)


état 27

   93 type_primary: TOK_FLOAT .

    $défaut  réduction par utilisation de la règle 93 (type_primary)


état 28

   94 type_primary: TOK_DOUBLE .

    $défaut  réduction par utilisation de la règle 94 (type_primary)


état 29

   87 type_specifier: TOK_VOID .

    $défaut  réduction par utilisation de la règle 87 (type_specifier)


état 30

   95 expr_primary: TOK_TRUE .

    $défaut  réduction par utilisation de la règle 95 (expr_primary)


état 31

   96 expr_primary: TOK_FALSE .

    $défaut  réduction par utilisation de la règle 96 (expr_primary)


état 32

   25 stm_return: TOK_RETURN . expression ';'
   26           | TOK_RETURN . ';'

    LITERAL_CHAR         décalage et aller à l'état 1
    LITERAL_BYTE         décalage et aller à l'état 2
    LITERAL_SHORT        décalage et aller à l'état 3
    LITERAL_INTEGER      décalage et aller à l'état 4
    LITERAL_LONG         décalage et aller à l'état 5
    LITERAL_FLOAT        décalage et aller à l'état 6
    LITERAL_DOUBLE       décalage et aller à l'état 7
    LITERAL_STRING       décalage et aller à l'état 8
    TOK_IDENTIFIER       décalage et aller à l'état 9
    TOK_TYPE_IDENTIFIER  décalage et aller à l'état 93
    TOK_TRUE             décalage et aller à l'état 30
    TOK_FALSE            décalage et aller à l'état 31
    TOK_INC              décalage et aller à l'état 33
    TOK_DEC              décalage et aller à l'état 34
    '('                  décalage et aller à l'état 35
    ';'                  décalage et aller à l'état 94
    '{'                  décalage et aller à l'état 95
    '+'                  décalage et aller à l'état 38
    '-'                  décalage et aller à l'état 39
    '~'                  décalage et aller à l'état 40
    '!'                  décalage et aller à l'état 41

    expr_primary      aller à l'état 60
    allocate_array    aller à l'état 61
    literal_array     aller à l'état 62
    expr_postfix      aller à l'état 63
    expr_unary        aller à l'état 64
    expr_mul          aller à l'état 65
    expr_add          aller à l'état 66
    expr_shift        aller à l'état 67
    expr_comparison   aller à l'état 68
    expr_equal        aller à l'état 69
    expr_bitwise_and  aller à l'état 70
    expr_bitwise_xor  aller à l'état 71
    expr_bitwise_or   aller à l'état 72
    expr_logical_and  aller à l'état 73
    expr_logical_or   aller à l'état 74
    expr_conditional  aller à l'état 75
    expr_assign       aller à l'état 76
    expression        aller à l'état 96


état 33

  125 expr_unary: TOK_INC . expr_unary

    LITERAL_CHAR         décalage et aller à l'état 1
    LITERAL_BYTE         décalage et aller à l'état 2
    LITERAL_SHORT        décalage et aller à l'état 3
    LITERAL_INTEGER      décalage et aller à l'état 4
    LITERAL_LONG         décalage et aller à l'état 5
    LITERAL_FLOAT        décalage et aller à l'état 6
    LITERAL_DOUBLE       décalage et aller à l'état 7
    LITERAL_STRING       décalage et aller à l'état 8
    TOK_IDENTIFIER       décalage et aller à l'état 9
    TOK_TYPE_IDENTIFIER  décalage et aller à l'état 93
    TOK_TRUE             décalage et aller à l'état 30
    TOK_FALSE            décalage et aller à l'état 31
    TOK_INC              décalage et aller à l'état 33
    TOK_DEC              décalage et aller à l'état 34
    '('                  décalage et aller à l'état 35
    '{'                  décalage et aller à l'état 95
    '+'                  décalage et aller à l'état 38
    '-'                  décalage et aller à l'état 39
    '~'                  décalage et aller à l'état 40
    '!'                  décalage et aller à l'état 41

    expr_primary    aller à l'état 60
    allocate_array  aller à l'état 61
    literal_array   aller à l'état 62
    expr_postfix    aller à l'état 63
    expr_unary      aller à l'état 97


état 34

  126 expr_unary: TOK_DEC . expr_unary

    LITERAL_CHAR         décalage et aller à l'état 1
    LITERAL_BYTE         décalage et aller à l'état 2
    LITERAL_SHORT        décalage et aller à l'état 3
    LITERAL_INTEGER      décalage et aller à l'état 4
    LITERAL_LONG         décalage et aller à l'état 5
    LITERAL_FLOAT        décalage et aller à l'état 6
    LITERAL_DOUBLE       décalage et aller à l'état 7
    LITERAL_STRING       décalage et aller à l'état 8
    TOK_IDENTIFIER       décalage et aller à l'état 9
    TOK_TYPE_IDENTIFIER  décalage et aller à l'état 93
    TOK_TRUE             décalage et aller à l'état 30
    TOK_FALSE            décalage et aller à l'état 31
    TOK_INC              décalage et aller à l'état 33
    TOK_DEC              décalage et aller à l'état 34
    '('                  décalage et aller à l'état 35
    '{'                  décalage et aller à l'état 95
    '+'                  décalage et aller à l'état 38
    '-'                  décalage et aller à l'état 39
    '~'                  décalage et aller à l'état 40
    '!'                  décalage et aller à l'état 41

    expr_primary    aller à l'état 60
    allocate_array  aller à l'état 61
    literal_array   aller à l'état 62
    expr_postfix    aller à l'état 63
    expr_unary      aller à l'état 98


état 35

  109 expr_primary: '(' . expression ')'

    LITERAL_CHAR         décalage et aller à l'état 1
    LITERAL_BYTE         décalage et aller à l'état 2
    LITERAL_SHORT        décalage et aller à l'état 3
    LITERAL_INTEGER      décalage et aller à l'état 4
    LITERAL_LONG         décalage et aller à l'état 5
    LITERAL_FLOAT        décalage et aller à l'état 6
    LITERAL_DOUBLE       décalage et aller à l'état 7
    LITERAL_STRING       décalage et aller à l'état 8
    TOK_IDENTIFIER       décalage et aller à l'état 9
    TOK_TYPE_IDENTIFIER  décalage et aller à l'état 93
    TOK_TRUE             décalage et aller à l'état 30
    TOK_FALSE            décalage et aller à l'état 31
    TOK_INC              décalage et aller à l'état 33
    TOK_DEC              décalage et aller à l'état 34
    '('                  décalage et aller à l'état 35
    '{'                  décalage et aller à l'état 95
    '+'                  décalage et aller à l'état 38
    '-'                  décalage et aller à l'état 39
    '~'                  décalage et aller à l'état 40
    '!'                  décalage et aller à l'état 41
